workshops/lab-intro-to-ytt-templates/exercises/templates-v2/service.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.website.name
spec:
  selector:
    app: #@ data.values.website.name
  ports:
  - port: 80
    targetPort: 8080
